[update] divide 'ENV' value to conf file location 'YML_LOCATION' and program run mode 'RUN_MODE'.

--- a/conf/conf.yml.tmpl
+++ b/conf/conf.yml.tmpl
@@ -4,6 +4,7 @@ CheckOnepanman:
   TargetURL: 'Onepanman URL[https://tonarinoyj.jp/episode/13932016480028985383]'
   ScrollDownNum: 1000
   KeyFilePath: 'dynamic/key.txt'
+  RunMode: 'aws'  # aws or local
   AWS:
     AccessKeyId:
     SecretAccessKey:
